<resources>
    <string name="default_web_client_id">225416897710-kd205mj1nlfofc5thdb2lltlhvht3glf.apps.googleusercontent.com</string>
    <string name="app_name">Habla Conmigo</string>

    <string name="eslogan">¡Aquí la comunicación no tiene límites!</string>
    <string name="descripcionimagenpresentacion">Imagen de dos personas comunicándose</string>
    <string name="login">Inicio de Sesión</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="correo_electronico">Correo electrónico :</string>
    <string name="ingresa_correo">Ingresa tu correo electrónico :</string>
    <string name="contrasena">Contraseña :</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="ingresa_contrasena">Crea una contraseña :</string>
    <string name="confirmar_contrasena">Confirma tu contraseña :</string>
    <string name="placeholder_confirmar_contrasena">Confirm Password*</string>
    <string name="placeholder_correo">Email*</string>
    <string name="placeholder_contrasena">Password*</string>
    <string name="forgotpassword">Olvidé mi\ncontraseña</string>
    <string name="signup">No tengo cuenta</string>
    <string name="entrar">¡Entrar!</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="continuar">Continuar</string>
    <string name="visibilidad_de_contraseña">Visibilidad de contraseña</string>
    <string name="google_auth_button">Continuar con Google</string>
    <string name="google_register_button">Registrarme con Google</string>
    <string name="facebook_auth_button">Continuar como invitado</string>
    <string name="facebook_register_button">Registrarme con Facebook</string>
    <string name="about_you">Cuéntanos un poco más sobre ti…</string>
    <string name="nombre">¿Cuál es tu nombre?</string>
    <string name="apellido">¿Cuál es tu apellido?</string>
    <string name="edad">¿Cuántos años tienes?</string>
    <string name="genero">¿Cuál es tu género?</string>
    <string name="direccion">¿Dónde vives?</string>
    <string name="boton_crear_cuenta">Botón para crear cuenta</string>
    <string name="convertir_cuenta_anonima">Convertir cuenta anónima</string>
    <string name="back">Atrás</string>
    <string name="recoverpassword">¡Recuperemos tu contraseña!</string>
    <string name="instruction">Por favor escribe el correo electrónico asociado a la cuenta, enviaremos un link para que reestablezcas la contraseña.</string>
    <string name="recoveraccountbtn">Recuperar cuenta</string>
    <string name="forwardlink">¿Aún no has recibido el link? Reenviar</string>
    <string name="descripcionimagenrecoverpassword">Imagen de una persona recuperando su contraseña</string>
    <string name="confirmarcambiocontrasenatext">Confirma el cambio de contraseña</string>
    <string name="indicacionesconfirmarcontrasena">Por favor escribe la misma contraseña que introdujiste en el link del email enviado.</string>
    <string name="confirmar">Confirmar</string>

    <string-array name="genero_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="languages">
        <item>Sin traducción</item>
        <item>Inglés</item>
        <item>Español</item>
    </string-array>
    <string name="traducir">Traducir</string>
    <string name="idioma">Idioma</string>
    <string name="remitente_tu">Tú</string>
    <string name="remitente_otro">Otro</string>
    <string name="config_chat">Configuraciones del Chat</string>
    <string name="vel_reproduccion">Velocidad de reproducción</string>
    <string name="rep_traduccion">Reproducir la traducción del mensaje</string>

    <string name="title_activity_main_menu_navigation">MainMenuNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="settings">Configuraciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_tarjetas">Tarjetas de Mensajes</string>
    <string name="menu_atajos">Atajos</string>
    <string name="escribir">Escribir</string>
    <string name="escuchar">Escuchar</string>
    <string name="enviar">Enviar mensaje</string>
    <string name="escribe_aqui">Escribe aquí</string>

    <string name="menu_list_shortcuts">String</string>

    <string name="chat_settings">Configuraciones de chat</string>

    <string name="btn_edit_folder">Boton de editar carpetas</string>
    <string name="btn_edit_card">Boton de crear nueva tarjeta</string>
    <string name="nombre_nueva_tarjeta">Nombre de la nueva tarjeta</string>
    <string name="que_quieres_reproduzca">¿Qué quieres que reproduzca?</string>
    <string name="usar_propio_audio">¿Quieres usar tu propio audio?\n(opcional)</string>
    <string name="asignar_imagen">Asígnale una imagen\n(opcional)</string>
    <string name="guardar">Guardar</string>
    <string name="grabar_audio">Grabar audio</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="titulo">Título*</string>
    <string name="frase">Frase*</string>
    <string name="crear_tarjeta">Crear Nueva Tarjeta</string>




</resources>