<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_tarjetas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tarjetas" />
        <item
            android:id="@+id/nav_atajos"
            android:icon="@drawable/ic_menu_atajos"
            android:title="@string/menu_atajos" />
    </group>

</menu>