<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hablaconmigo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.hablaconmigo.ui.gallery.GalleryFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tarjetas"
        android:name="com.example.hablaconmigo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_tarjetas"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_atajos"
        android:name="com.example.hablaconmigo.ui.shortcuts.ShortCutFragment"
        android:label="@string/menu_atajos"
        tools:layout="@layout/fragment_short_cut" />

    <fragment
        android:id="@+id/listShortCutsFragment"
        android:name="com.example.hablaconmigo.ui.shortcuts.ListShortCutsFragment"
        android:label="Frases"
        tools:layout="@layout/fragment_list_short_cuts">
        <argument
            android:name="carpetaTitulo"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/chatSettingsFragment"
        android:name="com.example.hablaconmigo.ui.gallery.ChatSettingsFragment"
        android:label="@string/chat_settings"
        tools:layout="@layout/fragment_chat_settings" />

    <fragment
        android:id="@+id/createMessageCardFragment"
        android:name="com.example.hablaconmigo.ui.slideshow.CreateMessageCardFragment"
        android:label="@string/crear_tarjeta"
        tools:layout="@layout/fragment_create_message_card" />

</navigation>