<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitevariantbackground"
    tools:context=".RecoverPasswordFragment">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewtitlerecoverpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/recoverpassword"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/imagerecoverpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backbutton"
        tools:text="@string/recoverpassword" />

    <ImageView
        android:id="@+id/imagerecoverpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forgotpassword"
        android:contentDescription="@string/descripcionimagenrecoverpassword"
        app:layout_constraintBottom_toTopOf="@+id/textviewinstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewtitlerecoverpassword" />

    <TextView
        android:id="@+id/textviewinstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_vertical"
        android:lines="3"
        android:text="@string/instruction"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editxtemailrecover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagerecoverpassword"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/editxtemailrecover"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:hint="@string/placeholder_correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/variantblue"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/btnrecoveraccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewinstructions" />

    <Button
        android:id="@+id/btnrecoveraccount"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/lilita_one"
        android:text="@string/recoveraccountbtn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editxtemailrecover"
        app:layout_constraintStart_toStartOf="@+id/editxtemailrecover"
        app:layout_constraintTop_toBottomOf="@id/editxtemailrecover"
        app:rippleColor="@color/ripplecolorblack" />

</androidx.constraintlayout.widget.ConstraintLayout>