<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitevariantbackground"
    tools:context=".SignUpActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/main_image" />

    <TextView
        android:id="@+id/title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/create_account"
        android:textColor="@color/erierblack"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/ingresa_correo"
        android:textColor="@color/erierblack"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/edtemail"
        app:layout_constraintTop_toBottomOf="@+id/title_signup" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/placeholder_correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/ingresa_contrasena"
        android:textColor="@color/erierblack"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/edtemail" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/placeholder_contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/confirmar_contrasena"
        android:textColor="@color/erierblack"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/placeholder_confirmar_contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/boton_crear_cuenta"
        android:fontFamily="@font/lilita_one"
        android:onClick="createAccount"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        app:rippleColor="@color/ripplecolorblack" />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/erierblack"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/google_register_btn"
        app:layout_constraintEnd_toStartOf="@id/goToLogin"
        app:layout_constraintStart_toStartOf="@+id/btnCrearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearCuenta" />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:onClick="returnToLogin"
        android:text="@string/inicia_sesion"
        android:textColor="@drawable/selector_txtviewgotologin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/google_register_btn"
        app:layout_constraintEnd_toEndOf="@+id/btnCrearCuenta"
        app:layout_constraintStart_toEndOf="@+id/already_account"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearCuenta" />

    <Button
        android:id="@+id/google_register_btn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#4E4C4B"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:onClick="signIn"
        android:text="@string/google_register_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCrearCuenta"
        app:layout_constraintStart_toStartOf="@+id/btnCrearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/already_account" />



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/google_register_btn"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/google_register_btn"
        app:srcCompat="@drawable/google_logo" />



    <ImageButton
        android:id="@+id/imageBtnEye"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/transparent"
        android:contentDescription="@string/visibilidad_de_contraseña"
        app:layout_constraintBottom_toBottomOf="@+id/password1"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/password1"
        app:srcCompat="@drawable/eye" />

    <ImageButton
        android:id="@+id/imageBtnEye2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="@color/transparent"
        android:contentDescription="@string/visibilidad_de_contraseña"
        app:layout_constraintBottom_toBottomOf="@+id/confirmpassword"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/confirmpassword"
        app:srcCompat="@drawable/eye" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:text="(6 caracteres o más)"
        android:textColor="@color/variantblack"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/edtemail" />

</androidx.constraintlayout.widget.ConstraintLayout>