<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitevariantbackground"
    tools:context=".ConfirmPasswordFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/indicacionesconfirmarcontrasena"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtvTitulo"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/confirmar_contrasena"
        app:boxStrokeColor="@color/variantblue"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/validarbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpasswordreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/variantblue"
            android:textColorHint="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutpassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/validarbtn"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/lilita_one"
        android:text="@string/confirmar"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutpassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutpassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutpassword"
        app:rippleColor="@color/ripplecolorblack" />

    <TextView
        android:id="@+id/txtvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/confirmarcambiocontrasenatext"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>